--- a/sb_squash_games/src/main/resources/templates/admin.index.html
+++ b/sb_squash_games/src/main/resources/templates/admin.index.html
@@ -32,6 +32,30 @@
 				
 			</div>
 		</div>
+		
+		<div class="row justify-content-center align-items-center">
+			<div class="col-12 col-md-6">
+			
+				<p>Add location</p>
+				<form action="/admin/addLocation" method="POST">
+					<div class="mb-3">
+						<label for="locationName" class="form-label">Location name</label> 
+						<input type="text" class="form-control" name="locationName" id="locationName" placeholder="Squashberek">
+					</div>
+					<div class="mb-3">
+						<label for="locationAddress" class="form-label">Location address</label>
+						<input type="text" class="form-control" name="locationAddress" id="locationAddress" placeholder="2800. Tatabanya, Test utca 1">
+					</div>
+					<div class="mb-3">
+						<label for="hourlyRate" class="form-label">Hourly rate</label>
+						<input type="number" class="form-control" name="hourlyRate" id="hourlyRate" placeholder="1500 Ft">
+					</div>
+					<button type="submit" class="btn btn-primary">Add</button>
+				</form>	
+				
+			</div>
+		</div>
+		
 	</div>
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js">
