--- a/sb_squash_games/src/main/resources/templates/admin.login.html
+++ b/sb_squash_games/src/main/resources/templates/admin.login.html
@@ -28,6 +28,7 @@
 	</div>
 
 	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js">
+	</script>
 </body>
 </html>
