--- a/sb_squash_games/src/main/resources/templates/index.html
+++ b/sb_squash_games/src/main/resources/templates/index.html
@@ -5,7 +5,12 @@
 <title>Index</title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-	rel="stylesheet">
+	rel="stylesheet"
+>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+>
 </head>
 <body>
 	
@@ -38,6 +43,28 @@
 				</table>
 			</div>
 		</div>
+		
+		<div class="row">
+			<div class="col-12">
+				<table class="table table-striped table-bordered">
+					<thead>
+						<tr>
+				      		<th scope="col">Location name</th>
+				      		<th scope="col">Location address</th>
+				      		<th scope="col">Location hourly rate</th>
+				    	</tr>
+				  	</thead>
+				  	<tbody>
+				    	<tr th:each="location : ${locations}">
+			    			<td th:text="${location.name}"></td>
+			    			<td th:text="${location.address}"></td>
+			    			<td th:text="${location.hourlyRate}"></td>
+				    	</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		
 	</div>
 	
 	<script
